# Rust_Study

./: .gitignore  Cargo.toml  HOWTO.txt  Rust.txt
Async_Programming/: Cargo.toml  Readme.txt
Collections/: Cargo.toml  Readme.txt
Cryptogrphy_Encryption/: Cargo.toml
Databases/: Cargo.toml
DesignPatterns/: Cargo.toml  README.md
Files_Folders_Directories/: Cargo.toml
Json/: Cargo.toml
Logging/: Cargo.toml
Multithreading/: Cargo.toml
Networking/: Cargo.toml  TODO.txt
Networking/src/: client.rs  client_server_examples.rs  listen_port.rs  main.rs  tcp_servers.rs  tokio_asynch_tcp_client.rs  tokio_asynch_tcp_server.rs  udp_servers.rs
Networking/src/api_services/: main.rs
Networking/src/mio/: Servers.rs
Networking/src/ssh/: main.rs  ssh_pool_private_key.rs
Networking/src/std/: ProxyServer.rs  dns.rs  web_sockets.rs
Networking/src/tokio/: tokio_asynch_tcp_client.rs
StdLibrary/: Cargo.toml
StdLibrary/src/: main.rs
StdLibrary/src/Autotests/: autotests.rs
StdLibrary/src/Bytes_Bits/: binary_parser.rs  main.rs
StdLibrary/src/Command_Line_Arguments/: main_command_line.rs
StdLibrary/src/Compare/: compare.rs
StdLibrary/src/Console_IO/: console_io.rs
StdLibrary/src/Cryptography/: main.rs
StdLibrary/src/Directories/: directories.rs
StdLibrary/src/Dispatching/: dynamic_dispatch.rs
StdLibrary/src/Documentation/: html_documentation.rs
StdLibrary/src/Enums/: control_flow_matching.rs  cpp_style_enums.rs  enums.rs  enums_match.rs  enums_methods.rs  underlying_type.rs
StdLibrary/src/Enums/examples/: examples_json_representation.rs  examples_read_file_demo.rs  examples_state_machine.rs  examples_typed_configuration.rs
StdLibrary/src/Environment/: environment.rs
StdLibrary/src/ErrorsHandling/: errors_handling.rs  function_return_result.rs
StdLibrary/src/Files_Folders_Directories/: asynch_io.rs  files.rs  main.rs  paths.rs
StdLibrary/src/Functions/: function_ptr.rs  functions.rs
StdLibrary/src/Generics_Templates/: bounds_constraints.rs  functions.rs  generics.rs  phantom_data.rs  structs.rs  where_clause.rs
StdLibrary/src/Input_Arguments/: read_from_input.rs
StdLibrary/src/Json/: Json.rs
StdLibrary/src/Lifetime_Borrowing/: main.rs
StdLibrary/src/Logger/: main_logger.rs
StdLibrary/src/Loops/: loops.rs
StdLibrary/src/Memory/: memory.rs
StdLibrary/src/OOP_Structures/: Long.rs  class_methods.rs  constructors.rs  inline_methods.rs  main.rs  memory_layout.rs  structs.rs
StdLibrary/src/OOP_Structures/examples/: builder.rs  network_packet_headers.rs
StdLibrary/src/OOP_Traits/: base_example.rs  drop_trait.rs  dynamic_dispatch.rs  operator_overloading.rs  return_trait_from_function.rs  static_dispatch_enum.rs  traits.rs
StdLibrary/src/Operators_Overload/: dereference.rs  main.rs
StdLibrary/src/Optional/: optional.rs
StdLibrary/src/Optional/examples/: examples.rs  finding_element_in_collection.rs  parsing_strings_to_numbers.rs  simple_cache.rs
StdLibrary/src/Ownership/: ownership.rs
StdLibrary/src/Pattern_Matching/: main.rs  while_let.rs
StdLibrary/src/Pointers_and_References/: pointers_and_reference.rs
StdLibrary/src/Printing/: logger_printer.rs  pretty_table.rs  print.rs
StdLibrary/src/Random/: random.rs
StdLibrary/src/Result/: result.rs
StdLibrary/src/ScopingRules_LifeTIme_RAII/: ownership_moves.rs  partial_moves.rs
StdLibrary/src/Slices/: slices.rs
StdLibrary/src/SmartPointers/: Arc.rs  Cell.rs  Mutex.rs  Rc.rs  Readme.md  RefCell.rs  main.rs
StdLibrary/src/Strings/: strings.rs
StdLibrary/src/Test_Experiments/: tests_and_experiments.rs
StdLibrary/src/Time_Duration/: system_time.rs  tests.rs  time_to_string.rs
StdLibrary/src/Tuples/: tuples.rs
StdLibrary/src/Types/: From_Into.rs  Try_From.rs  aliases.rs  from_into.rs  from_to_string.rs  newtype_idiom.rs  try_from.rs  types_tests.rs
StdLibrary/src/Unsafe_Features/: unsafe_features.rs
ZeroMQ_ProtoBuff/: Cargo.toml  build.rs
ZeroMQ_ProtoBuff/docs/: 1.md
ZeroMQ_ProtoBuff/proto/: item.proto  message.proto
ZeroMQ_ProtoBuff/src/: main.rs  multiple_handlers.rs  server_1.rs
resources/: Cargo.toml  my_database.db
resources/json_files/: simple_value.json
resources/test_files/: in_out.txt
resources/test_ssh_keys/: id_ed25519  id_ed25519.pub
resources/test_ssh_keys2/: id_ed25519  id_ed25519.pub
(+187 files in other folders)
