[package]
name = "Rust_Study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.41"
clap = "4.5.39"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
futures = "0.3.31"
futures-util = "0.3.31"
flume = "0.11.1"
http = "1.3.1"
log = "0.4.27"
native-tls = "0.2.12"
num_cpus = "1.17.0"
rand = "0.9.1"
reqwest = { version = "0.12.20",  features = ["blocking", "rustls-tls"] , default-features=false}
ring = "0.17.14"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rustdns = "0.4.0"
rwf = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
threadpool = "1.8.1"
tokio = { version = "1.45.1", features = ["rt", "net", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = {version = "0.27", features = ["native-tls-vendored"]}
url = "2.5.4"
walkdir = "2.5.0"
websocket = "0.27.1"