[workspace]
resolver = "3"
members = [
    "Collections",
    "Cryptogrphy_Encryption",
    "Databases",
    "DesignPatterns",
    "Json",
    "Logging",
    "Multithreading",
    "Networking",
    "Protobuf",
    "Serialization",
    "StdLibrary",
    "Testing",
    "Web_Framework",
    "ZeroMQ"
]
