[workspace]
resolver = "3"
members = [
    "Async_Programming",
    "Collections",
    "Cryptogrphy_Encryption",
    "Databases",
    "DesignPatterns",
    "Json",
    "Logging",
    "Multithreading",
    "Networking",
    "Protobuf",
    "Serialization",
    "StdLibrary",
    "Testing",
    "Web_Framework",
    "ZeroMQ",
    "ZeroMQ_ProtoBuff"
]
