[package]
name = "Networking"
version = "0.1.0"
edition = "2024"

[dependencies]
websocket = "0.27.1"
reqwest = { version = "0.12.20",  features = ["blocking", "rustls-tls"] , default-features=false}
rustdns = "0.4.0"
tokio = { version = "1.45.1", features = ["rt", "net", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = {version = "0.27", features = ["native-tls-vendored"]}
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
native-tls = "0.2.14"
mio = "1.0.4"