[package]
name = "Networking"
version = "0.1.0"
edition = "2024"

[dependencies]
websocket = "0.27.1"
reqwest = { version = "0.12.23",  features = ["blocking", "rustls-tls"] , default-features=false}
rustdns = "0.4.0"
tokio = { version = "1.49.0", features = ["rt", "net", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = {version = "0.28", features = ["native-tls-vendored"]}
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
native-tls = "0.2.16"
mio = "1.1.1"
anyhow = "1.0.101"
ssh2 = "0.9.5"
actix-web = "4"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
openssh = "0.10"
deadpool = "0.10"
async-trait = "0.1"
thiserror = "1.0.69"