[package]
name = "StdLibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
walkdir = "2.5.0"
ring = "0.17.14"
threadpool = "1.8.1"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = "0.4.41"
prettytable = "0.10"