[package]
name = "ZeroMQ_ProtoBuff"
version = "0.1.0"
edition = "2024"

[dependencies]
zmq = "0.10"
prost = "0.14.1"
prost-build = "0.14.1"
protobuf-codegen-pure = "3.0.0-alpha.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"


[build-dependencies]
prost-build = "0.14.1"
config = "0.15.19"